src_old/objects/EntityChangeType__c.object
<CustomObject>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>Change Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionField__c</fullName>
        <label>Condition Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityExecutionOrder__c</fullName>
        <label>Entity Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EntityHistoryObject__c</fullName>
        <label>Entity History Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>ProjectService</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>JobAttemptWorker</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Entity Change Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ChangeType__c</columns>
        <columns>Entity__c</columns>
        <columns>Field__c</columns>
        <columns>ConditionField__c</columns>
        <columns>EntityHistoryObject__c</columns>
        <columns>NAME</columns>
        <columns>UniqueKey__c</columns>
        <columns>Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ECT-{00000}</displayFormat>
        <label>Entity Change Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Change Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>